--- a/client/public/index.html
+++ b/client/public/index.html
@@ -43,12 +43,191 @@
       top: -200px;
       z-index: 10000;
     }
+
+    #global-loading {
+      z-index: 100000 !important;
+      position: fixed;
+      width: 100%;
+      display: flex;
+      background: rgb(0, 155, 160);
+      height: 100%;
+      vertical-align: middle;
+      align-items: center;
+      opacity: 1;
+      transition: opacity 0.3s;
+      top: 0;
+      left: 0
+    }
+
+    #global-loading.fade {
+      opacity: 0;
+    }
+
+    .ball-container {
+      width: 200px;
+      height: 200px;
+      padding-top: 20px;
+      margin: 0 auto;
+    }
+
+    .ball {
+      width: 10px;
+      height: 10px;
+      margin: 10px auto;
+      border-radius: 50px;
+    }
+
+    .ball:nth-child(1) {
+      background: white;
+      -webkit-animation: right 1s infinite ease-in-out;
+      -moz-animation: right 1s infinite ease-in-out;
+      animation: right 1s infinite ease-in-out;
+    }
+
+    .ball:nth-child(2) {
+      background: white;
+      -webkit-animation: left 1.1s infinite ease-in-out;
+      -moz-animation: left 1.1s infinite ease-in-out;
+      animation: left 1.1s infinite ease-in-out;
+    }
+
+    .ball:nth-child(3) {
+      background: white;
+      -webkit-animation: right 1.05s infinite ease-in-out;
+      -moz-animation: right 1.05s infinite ease-in-out;
+      animation: right 1.05s infinite ease-in-out;
+    }
+
+    .ball:nth-child(4) {
+      background: white;
+      -webkit-animation: left 1.15s infinite ease-in-out;
+      -moz-animation: left 1.15s infinite ease-in-out;
+      animation: left 1.15s infinite ease-in-out;
+    }
+
+    .ball:nth-child(5) {
+      background: white;
+      -webkit-animation: right 1.1s infinite ease-in-out;
+      -moz-animation: right 1.1s infinite ease-in-out;
+      animation: right 1.1s infinite ease-in-out;
+    }
+
+    .ball:nth-child(6) {
+      background: white;
+      -webkit-animation: left 1.05s infinite ease-in-out;
+      -moz-animation: left 1.05s infinite ease-in-out;
+      animation: left 1.05s infinite ease-in-out;
+    }
+
+    .ball:nth-child(7) {
+      background: white;
+      -webkit-animation: right 1s infinite ease-in-out;
+      -moz-animation: right 1s infinite ease-in-out;
+      animation: right 1s infinite ease-in-out;
+    }
+
+
+
+    @-webkit-keyframes right {
+      0% {
+        -webkit-transform: translate(-15px);
+      }
+
+      50% {
+        -webkit-transform: translate(15px);
+      }
+
+      100% {
+        -webkit-transform: translate(-15px);
+      }
+    }
+
+    @-webkit-keyframes left {
+      0% {
+        -webkit-transform: translate(15px);
+      }
+
+      50% {
+        -webkit-transform: translate(-15px);
+      }
+
+      100% {
+        -webkit-transform: translate(15px);
+      }
+    }
+
+    @-moz-keyframes right {
+      0% {
+        -moz-transform: translate(-15px);
+      }
+
+      50% {
+        -moz-transform: translate(15px);
+      }
+
+      100% {
+        -moz-transform: translate(-15px);
+      }
+    }
+
+    @-moz-keyframes left {
+      0% {
+        -moz-transform: translate(15px);
+      }
+
+      50% {
+        -moz-transform: translate(-15px);
+      }
+
+      100% {
+        -moz-transform: translate(15px);
+      }
+    }
+
+    @keyframes right {
+      0% {
+        transform: translate(-15px);
+      }
+
+      50% {
+        transform: translate(15px);
+      }
+
+      100% {
+        transform: translate(-15px);
+      }
+    }
+
+    @keyframes left {
+      0% {
+        transform: translate(15px);
+      }
+
+      50% {
+        transform: translate(-15px);
+      }
+
+      100% {
+        transform: translate(15px);
+      }
+    }
   </style>
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div class="statusbar-overlay"></div>
+  <div id="global-loading">
+    <div class="ball-container">
+      <div class="ball"></div>
+      <div class="ball"></div>
+      <div class="ball"></div>
+      <div class="ball"></div>
+      <div class="ball"></div>
+      <div class="ball"></div>
+      <div class="ball"></div>
+    </div>
+  </div>
   <div id="root"></div>
   <!--
       This HTML file is a template.
