--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,29 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <link rel="icon" href="%PUBLIC_URL%/favicon" />
+        <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png" />
+        <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png" />
+        <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png" />
+        <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#5bbad5" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;display=swap" />
+        <meta name="msapplication-TileColor" content="#00a300" />
+        <meta name="theme-color" content="#ffffff" />
 
-<head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon" />
-
-  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
-  <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#5bbad5">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;display=swap">
-  <meta name="msapplication-TileColor" content="#00a300">
-  <meta name="theme-color" content="#ffffff">
-
-
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <meta name="theme-color" content="#fafafa" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <!--
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="description" content="Web site created using create-react-app" />
+        <meta name="theme-color" content="#fafafa" />
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+        <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <!--
+        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+        <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -32,204 +29,202 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Hibachi House</title>
+        <title>Hibachi House</title>
 
-  <style>
-    .statusbar-overlay {
-      background: rgb(0, 155, 160);
-      width: 100%;
-      position: fixed;
-      height: 200px;
-      top: -200px;
-      z-index: 10000;
-    }
+        <style>
+            .statusbar-overlay {
+                background: rgb(0, 155, 160);
+                width: 100%;
+                position: fixed;
+                height: 200px;
+                top: -200px;
+                z-index: 10000;
+            }
 
-    #global-loading {
-      z-index: 100000 !important;
-      position: fixed;
-      width: 100%;
-      display: flex;
-      background: rgb(0, 155, 160);
-      height: 100%;
-      vertical-align: middle;
-      align-items: center;
-      opacity: 1;
-      transition: opacity 0.5s;
-      top: 0;
-      left: 0
-    }
+            #global-loading {
+                z-index: 100000 !important;
+                position: fixed;
+                width: 100%;
+                display: flex;
+                background: rgb(0, 155, 160);
+                height: 100%;
+                vertical-align: middle;
+                align-items: center;
+                opacity: 1;
+                transition: opacity 0.5s;
+                top: 0;
+                left: 0;
+            }
 
-    #global-loading.fade {
-      opacity: 0;
-    }
+            #global-loading.fade {
+                opacity: 0;
+            }
 
-    .ball-container {
-      width: 200px;
-      height: 200px;
-      padding-top: 20px;
-      margin: 0 auto;
-    }
+            .ball-container {
+                width: 200px;
+                height: 200px;
+                padding-top: 20px;
+                margin: 0 auto;
+            }
 
-    .ball {
-      width: 10px;
-      height: 10px;
-      margin: 10px auto;
-      border-radius: 50px;
-    }
+            .ball {
+                width: 10px;
+                height: 10px;
+                margin: 10px auto;
+                border-radius: 50px;
+            }
 
-    .ball:nth-child(1) {
-      background: white;
-      -webkit-animation: right 1s infinite ease-in-out;
-      -moz-animation: right 1s infinite ease-in-out;
-      animation: right 1s infinite ease-in-out;
-    }
+            .ball:nth-child(1) {
+                background: white;
+                -webkit-animation: right 1s infinite ease-in-out;
+                -moz-animation: right 1s infinite ease-in-out;
+                animation: right 1s infinite ease-in-out;
+            }
 
-    .ball:nth-child(2) {
-      background: white;
-      -webkit-animation: left 1.1s infinite ease-in-out;
-      -moz-animation: left 1.1s infinite ease-in-out;
-      animation: left 1.1s infinite ease-in-out;
-    }
+            .ball:nth-child(2) {
+                background: white;
+                -webkit-animation: left 1.1s infinite ease-in-out;
+                -moz-animation: left 1.1s infinite ease-in-out;
+                animation: left 1.1s infinite ease-in-out;
+            }
 
-    .ball:nth-child(3) {
-      background: white;
-      -webkit-animation: right 1.05s infinite ease-in-out;
-      -moz-animation: right 1.05s infinite ease-in-out;
-      animation: right 1.05s infinite ease-in-out;
-    }
+            .ball:nth-child(3) {
+                background: white;
+                -webkit-animation: right 1.05s infinite ease-in-out;
+                -moz-animation: right 1.05s infinite ease-in-out;
+                animation: right 1.05s infinite ease-in-out;
+            }
 
-    .ball:nth-child(4) {
-      background: white;
-      -webkit-animation: left 1.15s infinite ease-in-out;
-      -moz-animation: left 1.15s infinite ease-in-out;
-      animation: left 1.15s infinite ease-in-out;
-    }
+            .ball:nth-child(4) {
+                background: white;
+                -webkit-animation: left 1.15s infinite ease-in-out;
+                -moz-animation: left 1.15s infinite ease-in-out;
+                animation: left 1.15s infinite ease-in-out;
+            }
 
-    .ball:nth-child(5) {
-      background: white;
-      -webkit-animation: right 1.1s infinite ease-in-out;
-      -moz-animation: right 1.1s infinite ease-in-out;
-      animation: right 1.1s infinite ease-in-out;
-    }
+            .ball:nth-child(5) {
+                background: white;
+                -webkit-animation: right 1.1s infinite ease-in-out;
+                -moz-animation: right 1.1s infinite ease-in-out;
+                animation: right 1.1s infinite ease-in-out;
+            }
 
-    .ball:nth-child(6) {
-      background: white;
-      -webkit-animation: left 1.05s infinite ease-in-out;
-      -moz-animation: left 1.05s infinite ease-in-out;
-      animation: left 1.05s infinite ease-in-out;
-    }
+            .ball:nth-child(6) {
+                background: white;
+                -webkit-animation: left 1.05s infinite ease-in-out;
+                -moz-animation: left 1.05s infinite ease-in-out;
+                animation: left 1.05s infinite ease-in-out;
+            }
 
-    .ball:nth-child(7) {
-      background: white;
-      -webkit-animation: right 1s infinite ease-in-out;
-      -moz-animation: right 1s infinite ease-in-out;
-      animation: right 1s infinite ease-in-out;
-    }
+            .ball:nth-child(7) {
+                background: white;
+                -webkit-animation: right 1s infinite ease-in-out;
+                -moz-animation: right 1s infinite ease-in-out;
+                animation: right 1s infinite ease-in-out;
+            }
 
+            @-webkit-keyframes right {
+                0% {
+                    -webkit-transform: translate(-15px);
+                }
 
+                50% {
+                    -webkit-transform: translate(15px);
+                }
 
-    @-webkit-keyframes right {
-      0% {
-        -webkit-transform: translate(-15px);
-      }
+                100% {
+                    -webkit-transform: translate(-15px);
+                }
+            }
 
-      50% {
-        -webkit-transform: translate(15px);
-      }
+            @-webkit-keyframes left {
+                0% {
+                    -webkit-transform: translate(15px);
+                }
 
-      100% {
-        -webkit-transform: translate(-15px);
-      }
-    }
+                50% {
+                    -webkit-transform: translate(-15px);
+                }
 
-    @-webkit-keyframes left {
-      0% {
-        -webkit-transform: translate(15px);
-      }
+                100% {
+                    -webkit-transform: translate(15px);
+                }
+            }
 
-      50% {
-        -webkit-transform: translate(-15px);
-      }
+            @-moz-keyframes right {
+                0% {
+                    -moz-transform: translate(-15px);
+                }
 
-      100% {
-        -webkit-transform: translate(15px);
-      }
-    }
+                50% {
+                    -moz-transform: translate(15px);
+                }
 
-    @-moz-keyframes right {
-      0% {
-        -moz-transform: translate(-15px);
-      }
+                100% {
+                    -moz-transform: translate(-15px);
+                }
+            }
 
-      50% {
-        -moz-transform: translate(15px);
-      }
+            @-moz-keyframes left {
+                0% {
+                    -moz-transform: translate(15px);
+                }
 
-      100% {
-        -moz-transform: translate(-15px);
-      }
-    }
+                50% {
+                    -moz-transform: translate(-15px);
+                }
 
-    @-moz-keyframes left {
-      0% {
-        -moz-transform: translate(15px);
-      }
+                100% {
+                    -moz-transform: translate(15px);
+                }
+            }
 
-      50% {
-        -moz-transform: translate(-15px);
-      }
+            @keyframes right {
+                0% {
+                    transform: translate(-15px);
+                }
 
-      100% {
-        -moz-transform: translate(15px);
-      }
-    }
+                50% {
+                    transform: translate(15px);
+                }
 
-    @keyframes right {
-      0% {
-        transform: translate(-15px);
-      }
+                100% {
+                    transform: translate(-15px);
+                }
+            }
 
-      50% {
-        transform: translate(15px);
-      }
+            @keyframes left {
+                0% {
+                    transform: translate(15px);
+                }
 
-      100% {
-        transform: translate(-15px);
-      }
-    }
+                50% {
+                    transform: translate(-15px);
+                }
 
-    @keyframes left {
-      0% {
-        transform: translate(15px);
-      }
+                100% {
+                    transform: translate(15px);
+                }
+            }
+        </style>
+    </head>
 
-      50% {
-        transform: translate(-15px);
-      }
-
-      100% {
-        transform: translate(15px);
-      }
-    }
-  </style>
-</head>
-
-<body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div class="statusbar-overlay"></div>
-  <div id="global-loading">
-    <div class="ball-container">
-      <div class="ball"></div>
-      <div class="ball"></div>
-      <div class="ball"></div>
-      <div class="ball"></div>
-      <div class="ball"></div>
-      <div class="ball"></div>
-      <div class="ball"></div>
-    </div>
-  </div>
-  <div id="root"></div>
-  <!--
+    <body>
+        <noscript>You need to enable JavaScript to run this app.</noscript>
+        <div class="statusbar-overlay"></div>
+        <div id="global-loading">
+            <div class="ball-container">
+                <div class="ball"></div>
+                <div class="ball"></div>
+                <div class="ball"></div>
+                <div class="ball"></div>
+                <div class="ball"></div>
+                <div class="ball"></div>
+                <div class="ball"></div>
+            </div>
+        </div>
+        <div id="root"></div>
+        <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -240,11 +235,10 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
-  <div style="display:none">
-    Icons made by <a href="https://www.flaticon.com/authors/photo3idea-studio"
-      title="photo3idea_studio">photo3idea_studio</a> from <a href="https://www.flaticon.com/" title="Flaticon">
-      www.flaticon.com</a>
-  </div>
-</body>
-
+        <div style="display: none">
+            Icons made by
+            <a href="https://www.flaticon.com/authors/photo3idea-studio" title="photo3idea_studio">photo3idea_studio</a>
+            from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
+        </div>
+    </body>
 </html>
