--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,9 +17,8 @@
         <!-- iOS Safari -->
         <meta name="apple-mobile-web-app-status-bar-style" content="#009ba0" />
 
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no" />
         <meta name="description" content="Web site created using create-react-app" />
-        <meta name="theme-color" content="#fafafa" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
         <!--
       manifest.json provides metadata used when your web app is installed on a
